# tattletale-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: credential.rs  dit.rs  engine.rs  export.rs  io.rs  lib.rs  main.rs  pot.rs  report.rs  stats.rs  targets.rs
src/snapshots/: tattletale__report__tests__snapshot_summary.snap
tests/: e2e.rs
