[package]
name = "tattletale-rs"
version = "0.1.0"
edition = "2024"
description = "Post-exploitation NTDS dumpfile reporter, Rust port of TattleTale"
authors = ["@coryavra (original Python)", "@dejisec"]
license = "MIT"

[lib]
name = "tattletale"
path = "src/lib.rs"

[[bin]]
name = "tattletale"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
regex = "1"
colored = "2"
percent-encoding = "2"
chrono = { version = "0.4", features = ["clock"] }
memmap2 = "0.9"
memchr = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["glob"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
incremental = true
opt-level = 0
